--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "emailjs-com": "^3.2.0",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.1",
     "mailgun-js": "^0.22.0",
     "mongoose": "^7.4.4",
-    "sib-api-v3-sdk": "^8.5.0"
+    "sib-api-v3-sdk": "^8.5.0",
+    "xmlhttprequest": "^1.8.0"
   }
 }
